# Grafos

./: CMakeLists.txt  main.cpp
Headers/: Graph.h  Menu.h
Instâncias utilizadas/: grafo5regular.txt  grafoCP.txt  grafoKruskal.txt
MIs/: Graph.cpp
